# spireai

./: Cargo.toml
data/: acts.ron  buffs.ron  cards.ron  events.ron  monsters.ron  potions.ron  relics.ron
src/: comm.rs  main.rs  models.rs  serialization.rs  spireai.rs  state.rs
src/comm/: interop.rs  request.rs  response.rs
src/models/: acts.rs  buffs.rs  cards.rs  choices.rs  core.rs  effects.rs  events.rs  monsters.rs  potions.rs  relics.rs  state.rs  statuses.rs
src/spireai/: appraiser.rs  calculator.rs  enumerator.rs  evaluator.rs  predictor.rs  references.rs
src/state/: battle.rs  core.rs  event.rs  floor.rs  game.rs  map.rs  probability.rs  shop.rs
