[package]
name = "spireai"
version = "0.1.0"
authors = ["Nathan Merrill <nathan.t.merrill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
log = "0.4.14"
log4rs = "1.0.0"
im = "15.0.0"
phf = {version = "0.8.0", features = ["macros"]}
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"