[package]
name = "spireai"
version = "0.1.0"
authors = ["Nathan Merrill <nathan.t.merrill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"
json = "0.12.4"
itertools = "0.10.0"
rand = "0.8.3"
num = "0.4.0"
ron = "0.6.4"
im = "15.0.0"
num-integer = "0.1.44"
uuid = { version = "0.8.2", features = ["v4"] }
factorial = "0.2.1"